--- a/style.css
+++ b/style.css
@@ -673,27 +673,15 @@ input:-webkit-autofill:active {
     .main-row {
         margin-bottom: -3rem;
     }
-    .contact {
-        width: 100%;
-    }
-    .cont-row {
-        width: 100%;
-    }
-    .row .contact-col {
-        width: 30rem;
-    }
     .row .contact-col h1 {
         font-size: 2rem;
     }
-    .data, .txt-area, .sendDiv {
-        width: 40rem;
-    }
     #sendBtn {
         margin-top: 2rem;
-        width: 40rem;
     }
 }
-@media (max-width: 768px) {
+
+@media (max-width: 788px) {
     .logo {
         width: 3rem;
         height: 2.3rem;
@@ -782,70 +770,24 @@ input:-webkit-autofill:active {
     .col h1 {
         font-size: 2rem;
     }
-    .projects, .contact {
+    .projects {
         margin-top: -4rem;
+        width: 80%;
     }
     .proj-box h1 {
         margin-top: 5rem;
     }
-    .contact {
-        width: 100%;
-    }
-    .cont-row {
-        width: 90%;
-    }
-    .row .contact-col {
-        width: 28rem;
+    .row .contact-col, .inputBox .data, .inputBox .txt-area, .row .sendDiv #sendBtn {
+        width: 40rem;
     }
     .row .contact-col h1 {
         font-size: 2rem;
-    }
-    .data, .txt-area, #sendBtn, .sendDiv {
-        width: 28rem;
-    }  
+    } 
 }
 @media (max-width: 540px) {
     .logo {
         margin: 1.7rem 0 auto 2rem;
     }
-    /* #menu-icon {
-        display: block;
-    }
-    #exit-icon {
-        padding-top: 3rem;
-    }
-    #exit-icon.active {
-        display: block;
-    }
-    .nav-menu.active {
-        display: block;
-     }
-    .nav-menu {
-        position:fixed;
-        width: 100%;
-        height: 110%;
-        top: -8rem; 
-        left: 0rem;
-        display: none;
-        padding-top: 15rem;
-        background-color: var(--nav-menu-background);
-    }
-    .nav-link {
-        margin: 2rem;
-        transition: transform 0.3s ease;
-        display: block;
-        padding: 2.5rem;
-        text-align: center;
-    }
-     #exit-icon {
-        margin-bottom: -10rem;
-     }
-     .nav-link:hover::before {
-        width: 0;
-    }
-     .nav-link.hover, .nav-link.active {
-        color:var(--border-color);
-    } */
     .main-intro {
         width: 100%;
         margin-top: -12rem;
@@ -893,7 +835,7 @@ input:-webkit-autofill:active {
         margin: -1rem auto 3rem auto;
         width: auto;
     }
-    .row .contact-col, .data, .txt-area {
+    .row .contact-col, .inputBox .data, .inputBox .txt-area, .row .sendDiv #sendBtn {
         width: 30rem;
     }
     .sendDiv {
@@ -957,29 +899,10 @@ input:-webkit-autofill:active {
     .projects, .contact {
         margin-top: -4rem;
     }
-    .contact {
-        width: 100%;
-    }
-    .cont-row {
-        width: 100%;
-    }
-    .row .contact-col {
-        width: 100%;
-    }
     .row .contact-col h1 {
         font-size: 2rem;
     }
-    .data, .txt-area {
-        width: 95%;
-    }
     .btn {
         margin: 3rem auto;
-        width: 100%;
-    }
-    .sendDiv {
-        width: 100%;
-    }
-    #sendBtn {
-        width: 95%;
     }
 }
