--- a/studyabroad/htmls/styles.css
+++ b/studyabroad/htmls/styles.css
@@ -1,9 +1,9 @@
 :root {
     --wmu: #F1C500;
     --black: #000000;
-    --comment-bg: #dceefb;
     --header-color: #333;
     --footer-color: #555;
+    --comment-bg: #dceefb;
     --font-color: #f8f8f8;
     --border-color: #00abf0;
     --background-color: #081b29;
@@ -45,10 +45,10 @@ span {
     background-color: var(--background-light-color);
     width: 100%;
     height: 110%;
-    position: fixed;
     display: block;
-    text-align: center;
+    position: fixed;
     margin-top: -3rem;
+    text-align: center;
     z-index: 1000000000000;
 }
 .spin-parent2 {
@@ -57,14 +57,14 @@ span {
     text-align: center;
   }
 .spinner {
-    margin: auto;
     opacity: 1;
     width: 25px;
     height: 25px;
+    margin: auto;
     border-radius: 50%;
     animation: spin 1s linear infinite;
-    border: 2px solid var(--header-color);
     border-bottom: 2px solid var(--wmu);
+    border: 2px solid var(--header-color);
 }
 @keyframes spin {
     0% { transform: rotate(0deg); }
@@ -80,9 +80,9 @@ span {
 
 .nav-section {
     padding: 15px ;
-    color: var(--font-color);
     display: block;
     align-items: center;
+    color: var(--font-color);
     justify-content: space-between;
     background-color: var(--background-color);
 }
@@ -91,12 +91,13 @@ span {
     text-align: center;
 }
 .nav-section nav {
-    justify-content: center;
-    align-items: center;
-    text-align: center;
     width: 100%;
-    padding: 1rem;
     display: flex;
+    padding: 1rem;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+ 
 }
 
 .nav-section nav ul {
@@ -113,21 +114,21 @@ span {
 }
 
 .hamburger {
-    display: none;
-    cursor: pointer;
-    flex-direction: column;
-    justify-content: space-around;
     width: 30px;
     height: 30px;
-    position: relative;
+    display: none;
+    cursor: pointer;
     margin-left: auto;
+    position: relative;
+    flex-direction: column;
+    justify-content: space-around;
 }
 .hamburger span {
-    display: block;
     width: 25px;
     height: 2px;
-    background-color: var(--font-color);
+    display: block;
     transition: all 0.5s ease-in-out;
+    background-color: var(--font-color);
 }
 .hamburger.active span:nth-child(1) {
     transform: translateY(10px) rotate(45deg);
@@ -149,18 +150,18 @@ span {
         top: 0;
         width: 100%;
         height: 110%;
+        right: -100%;
         position: fixed;
         justify-content: center;
-        right: -100%;
         transition: 0.5s ease-in-out;
         background-color: var(--background-color);
     }
     .nav-section .off-screen-menu .nav-menu {
-        display: flex;
         gap: 50px;
-        flex-direction: column;
+        display: flex;
         font-size: 1.2rem;
         font-weight: bold;
+        flex-direction: column;
     }
     .nav-section .off-screen-menu.active {
         right: 0;
@@ -187,16 +188,7 @@ main {
     margin-bottom: 20px;
 }
 
-.gallery-images {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
 
-.gallery-images img {
-    margin: 10px;
-    max-width: 200px;
-}
 
 
 /* =================  Home page section ================= */
@@ -204,9 +196,9 @@ main {
     width: 100%;
 }
 .each-day {
+    gap: 1rem;
     display: flex;
     flex-wrap: wrap;
-    gap: 1rem;
     justify-content: center;
 }
 .day-txt {
@@ -217,14 +209,14 @@ main {
     flex-wrap: wrap;
 }
 .daily-activities {
-    width: 15rem;
+    gap: 0.5rem;
     height: auto;
+    width: 15rem;
     padding: 5px;
-    text-align: justify;
-    font-size: 0.8rem; 
     display: flex;
     flex-wrap: wrap;
-    gap: 0.5rem;
+    font-size: 0.8rem; 
+    text-align: justify;
 }
 .daily-img {
     margin: auto;
@@ -238,16 +230,14 @@ main {
 }
 
 /* =================  Journey section ================= */
-.learn-desc {
-    width: 85%;
-    margin: auto;
-}
 .learning {
     display: block;
     width: 90%;
     margin: auto;
 }
-
+.learn-desc {
+    width: 85%;
+}
 .learn-section {
     text-align:justify;
     width: 85%;
@@ -267,31 +257,11 @@ main {
 .last-p {
     margin-top: 10px;
 }
-
-/* =================  Journey section ================= */
-.headings .title {
-    margin-top: -7rem;
-    margin-bottom: 1rem;
-}
-.sa-desc {
-    gap: 20px;
-    display: flex;
-}
-.sa-desc .journey-desc {
-    text-align: justify;
-}
-
-.sa-desc .td-img img {
-    width: 25rem;
-    height: 15.5rem;
-    border-radius: 5px;
-}
-
-/* ================= thanks section styling ================= */
+/* ================= staff thanks section styling ================= */
 
 .staff {
-    margin: auto;
     gap: 2rem;
+    margin: auto;
     display: flex;
     flex-wrap: wrap;
     margin-top: 3rem;
@@ -325,6 +295,16 @@ main {
 }
 /* ================= gallery section styling ================= */
 
+.gallery-images {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.gallery-images img {
+    margin: 10px;
+    max-width: 200px;
+}
 .experiences {
     text-align: center;
 }
@@ -357,12 +337,12 @@ main {
 .modal {
     top: 0;
     left: 0;
-    z-index: 1000000; 
     width: 100%; 
     height: 100%; 
     display: none; 
     overflow: auto; 
     position: fixed; 
+    z-index: 1000000; 
     padding-top: 60px; 
     background-color: var(--background-color)
 }
@@ -374,14 +354,14 @@ main {
     max-width: 700px;
 }
 #caption {
-    margin: auto;
-    display: block;
     width: 80%;
+    margin: auto;
+    color: #ccc;
+    height: 150px;
+    display: block;
+    padding: 10px 0;
     max-width: 700px;
     text-align: center;
-    color: #ccc;
-    padding: 10px 0;
-    height: 150px;
 }
 .modal-content, #caption {    
     -webkit-animation-name: zoom;
@@ -402,13 +382,13 @@ main {
 
 /* The Close Button */
 .close {
-    position: absolute;
     top: 15px;
     left: 35px;
     color: #bbb;
     font-size: 40px;
-    font-weight: bold;
     transition: 0.3s;
+    font-weight: bold;
+    position: absolute;
 }
 .close:hover,
 .close:focus {
@@ -421,12 +401,14 @@ main {
 }
 .each-experience {
     margin: auto;
-    margin-top: 1rem;
     width: 95%;
     display: block;
-    border-radius: 5px;
-    background-color: var(--comment-bg);
+    margin-top: 1rem;
     color: var(--black);
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    background-color: var(--comment-bg);
+    border-left: 3px solid var(--background-color);
 }
 .bothAE {
     display: block;
@@ -441,13 +423,11 @@ main {
 .exper {
     padding: 25px;
     text-align:justify;
-
 }
 .exper  p {
     width: 100%;
     margin-top: -1rem;
 }
-
 /* ================= contact section styling ================= */
 .heading-line {
     text-align: center;
@@ -476,13 +456,13 @@ main {
 .row .col {
     width: 15rem;
     padding: 1rem;
-    transition: 0.5s;
+    z-index: -10000;
     overflow: hidden;
+    transition: 0.5s;
     position: relative;
     border-radius: 0.5rem;
     transition: transform 0.3s ease;
     border: 2px solid var(--box-border-color);
-    z-index: -10000;
 
 }
 .row .col:hover {
@@ -569,9 +549,9 @@ main {
     cursor: pointer;
     position: fixed;
     font-size: 2rem;
+    color: var(--font-color);
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
-    color: var(--font-color);
     background-color: var(--background-color);
 }
 /* =======================All Media Sizes======================== */
@@ -605,9 +585,9 @@ main {
         font-size: 2rem;
     }
     .all-titles p {
-        text-align: justify;
-        margin: 2rem auto;
         width: 97%;
+        margin: 2rem auto;
+        text-align: justify;
     }
     .card-parent {
         gap: 0.3rem;
@@ -621,8 +601,8 @@ main {
         margin: auto;
     }
     .each-experience {
-        margin: auto;
         width: 100%;
+        margin: auto;
         margin-top: 1rem;
         margin-bottom: 2rem;
     }
@@ -644,5 +624,27 @@ main {
         font-size: 1.3rem;
         font-weight: 100;
         color: var(--background-color);
+    }
+    .learning {
+        width: 100%;
+    }
+    .learn-section {
+        width: 90%;
+    }
+    .learn-section p {
+        padding-left: 10px;
+    }
+
+    .learn-section ul {
+        padding-left: 10px;
+    }
+    .last-p {
+        padding-left: 10px;
+    }
+    .feedbacks, .professor {
+        width: 97%;
+    }
+    .bothAE h3 {
+        margin-left: 7px;
     }
 }
