--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -352,24 +352,38 @@ span {
 }
 .proj-container .proj-box {
     width: 33rem;
-    height: 430px;
+    height: auto;
     text-align: center;
-    background-color: #060414;
+    background-color: transparent;
+    border-radius: 5px;
+    border: 2px solid var(--box-border-color);
 }
 .proj-box img {
-    width: 32.94rem;
+    width: 31.5rem;
     height: 20rem;
+    margin-top: 0.6rem;
+    border-radius: 5px;
 }
 .proj-box h1 {
-    font-size: 3rem;
+    font-size: 2rem;
     width: 90%;
     margin: 1.5rem auto;
     text-align: left;
 }
-.proj-box p {
+.proj-box .ul-div {
     width: 90%;
-    font-size: 1.6rem;
+    font-size: 12px;
     margin: 1rem 20px;
+    text-align: left;
+    padding-bottom: 2rem;
+}
+.skills-used h2 {
+    text-align: left;
+    padding-left: 2rem;
+
+}
+.skills-used ul {
+    padding-left: 4rem;
     text-align: left;
     padding-bottom: 2rem;
 }
